--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.jar=${dist.dir}/Login_Application.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.postgresql-42.7.5.jar=C:\\Users\\youss\\Downloads\\postgresql-42.7.5.jar
+file.reference.postgresql-42.7.5.jar=C:\\Users\\youss\\OneDrive\\Desktop\\postgresql-42.7.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
