--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/Login_Application.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jbcrypt-0.4.jar=jbcrypt-0.4.jar
 file.reference.postgresql-42.7.5.jar=C:\\Users\\youss\\OneDrive\\Desktop\\postgresql-42.7.5.jar
 file.reference.postgresql-42.7.5.jar-1=postgresql-42.7.5.jar
 includes=**
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.postgresql-42.7.5.jar}:\
-    ${file.reference.postgresql-42.7.5.jar-1}
+    ${file.reference.postgresql-42.7.5.jar-1}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
